# rust-zmanim

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  rustfmt.toml
examples/: README.rs  astronomical.rs  baal_hatanya.rs  basics.rs  chiluf_mishmaros.rs  csv.rs  mga_10_to_13_degrees.rs  zman_registry.rs
src/: astronomical_calculator.rs  astronomical_calendar.rs  complex_zmanim_calendar.rs  lib.rs  zmanim_calculator.rs  zmanim_calendar.rs
src/complex_zmanim_calendar/: cache.rs  czc_macros.rs  czc_struct.rs  mod.rs  registry.rs
src/complex_zmanim_calendar/doc_macros/: alos_docs.rs  mga_degrees_docs.rs  mga_minutes_docs.rs  mga_minutes_zmanis_docs.rs  mod.rs  (+2 more)
src/util/: astronomical_basics.rs  astronomical_calculations.rs  geolocation.rs  math_helper.rs  mod.rs  noaa_calculator.rs  zenith_adjustments.rs
tests/: registry_completeness.rs  registry_smoke.rs  test_ac_generated.rs  test_astronomical_calculator.rs  test_complex_zmanim_calculator.rs  test_czc_basic.rs  test_czc_each_zman.rs  test_czc_each_zman_elevation.rs  test_czc_each_zman_sea_level.rs  test_czc_generated_arctic_nunavut.rs  test_czc_generated_chatham_islands.rs  test_czc_generated_elevation.rs  test_czc_generated_fiji.rs  test_czc_generated_honolulu.rs  test_czc_generated_jerusalem.rs  test_czc_generated_lakewood.rs  test_czc_generated_los_angeles.rs  test_czc_generated_niue.rs  test_czc_generated_samoa.rs  test_czc_generated_sea_level.rs  test_czc_generated_tokyo.rs  test_czc_shaah_generated_elevation.rs  test_czc_shaah_generated_sea_level.rs  test_helper.rs  test_solar_position_generated.rs
